finished the feature to see the available rooms each hour

--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -124,10 +124,10 @@
     <div class="timetable">
     <div class="tabContainer">
         <div id="classes-tab" onclick="classTabClick()" class="tab selectedtab">
-            <h1>Classes</h1>
+            <h1>{% trans "Classes" %}</h1>
         </div>
         <div id="free-tab" onclick="roomsTabClick()" class="tab">
-            <h1>Free Rooms</h1>
+            <h1>{% trans "Free Rooms" %}</h1>
         </div>
     </div>
     <div class="table-container">
