--- a/static/index.css
+++ b/static/index.css
@@ -90,25 +90,25 @@ body,html{
 
 .tab{
     transition-duration: 1s;
-    background-color: red;
+    background-color: #95D2B3;
     flex-grow:1;
     margin:0;
     max-height: 90%;
 }
 
 .tab h1{
+    color: #272727;
     transition-duration: 0.5s;
     margin:inherit;
     text-align: center;
 }
-.selectedtab h1{
-    color:white;
-}
+
 .selectedtab{
     color: white;
+    box-shadow: 5px 10px 15px rgba(0,0,0,0.24);
     transition: 0.5s ease-in;
     max-height:100%;
-    background-color: purple;
+    background-color: #55AD9B;
 }
 .timetable{
     height: 100%;
