--- a/static/timetable.css
+++ b/static/timetable.css
@@ -33,15 +33,24 @@
             text-align: center;
             background-color: white;
         }
-        th {
+        th:dir(ltr) {
             border-right: 1px solid #dee2e6;
             background-color: #f2f2f2;
             color: #343a40;
         }
-        td{
+        td:dir(ltr){
             border-right: 1px solid #dee2e6;
 
             padding: 0;
+        }
+        th:dir(rtl){
+            border-left: 1px solid #dee2e6;
+           background-color: #f2f2f2;
+            color: #343a40;
+        }
+        td:dir(rtl){
+            padding: 0;
+            border-left: 1px solid #dee2e6;
         }
         .timerow{
             align-items: stretch;
@@ -129,6 +138,9 @@
     border-right: #305a54 solid 2px;
     height: 100%;
     background-color: rgba(241, 248, 232, 0.2);
+    max-width: 10%;
+    overflow: hidden;
+    transition-duration: 0.5s;
 }
 .filtering:dir(rtl){
     width: 10%;
@@ -139,6 +151,9 @@
     border-left: #305a54 solid 2px;
     height: 100%;
     background-color: rgba(241, 248, 232, 0.2);
+    max-width: 10%;
+    overflow: hidden;
+    transition-duration: 0.5s;
 }
 
 .button{
