--- a/templates/set_schedule.html
+++ b/templates/set_schedule.html
@@ -14,11 +14,12 @@
 <h1>{{ name }}</h1>
 <form method="post">
     {% csrf_token %}
-    {% for field in form %}
-        <div>
-                    {{ field.label }}:
-            {{ field }}
+    {{ forms.invisible_fields }}
 
+    {% for field in form %}
+        <div class="field">
+            {{ field.label }}:
+            {{ field }}
         </div>
     {% endfor %}
     <input type="submit" value="{% trans "Set!" %}">
