continued working on Schedule manager

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'sidebar.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'stylesheet.css' %}">
+{% block static %}{% endblock %}
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
 </head>
