--- a/templates/schedule_manager.html
+++ b/templates/schedule_manager.html
@@ -1,5 +1,52 @@
 {% extends "Base.html" %}
+{% load static %}
+{% block static %}<link rel="stylesheet" type="text/css" href="{% static 'schedule_manager.css' %}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">{% endblock %}
+{% block title %}Schedule Manager{% endblock %}
 {% block content %}
-{{ students }}
+    <div class="student-list">
+    {% csrf_token %}
+{% for student,value in students.items %}
+    {% if value.0 %}
+    <div class="has_schedule student">
+        {{ student }} {% csrf_token %}<input name="uuid" type="hidden" value="{{ value.1 }}"><button type="submit" class="btn btn-danger" style="margin-right:auto" >Reset Schedule</button
+    </div>
+    {% else %}
+        <div class="no_schedule student">{{ student }} {% csrf_token %}<button id="{{ value.1 }}" onclick="sendEmail(this)" style="margin-right: auto" class="btn btn-primary">Send Invite</button></div>
+    {% endif %}
+    {% endfor %}
+    </div>
 
+    <script>
+      const url = "{% url "send_email" %}";
+      
+      async function sendEmail(a) {
+           let data = {
+            'uuid': a.id,
+        };
+        let csrftoken = getCookie('csrftoken');
+        let response = fetch("{% url "send_email" %}", {
+            method: 'POST',
+            body: JSON.stringify(data),
+            headers: { "X-CSRFToken": csrftoken },
+        })
+        
+        // The following function are copying from 
+        // https://docs.djangoproject.com/en/dev/ref/csrf/#ajax
+        function getCookie(name) {
+            var cookieValue = null;
+            if (document.cookie && document.cookie !== '') {
+                var cookies = document.cookie.split(';');
+                for (var i = 0; i < cookies.length; i++) {
+                    var cookie = cookies[i].trim();
+                    // Does this cookie string begin with the name we want?
+                    if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                        cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                        break;
+                    }
+                }
+            }
+            return cookieValue;}}
+
+    </script>
 {% endblock %}
