--- a/static/student_details.css
+++ b/static/student_details.css
@@ -4,7 +4,17 @@ body {
     margin: 0;
     padding: 0;
 }
-
+.student_details{
+    text-align:center;
+}
+.second-row table tr td h2{
+    margin: 0;
+    padding: 0;
+}
+.second-row table tr td{
+    margin: 5px;
+    padding: 5px;
+}
 .class h1 {
     text-align: center;
     font-size: medium;
