--- a/templates/student_manager.html
+++ b/templates/student_manager.html
@@ -1,10 +1,24 @@
 {% extends 'base.html' %}
-{% block static %}<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+{% load static %}
+{% block static %}
+    <link rel="stylesheet" href="{% static 'student_details.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{%  static 'student_manager.css' %}">
 {% endblock %}
 {% block content %}
-<select class="select">
+    {{ students.0 }}
 {% for student,uuid in students.items %}
-<option id="{{ uuid }}">{{ student }}</option>
-{% endfor %}
-</select>
+    <div  class="student">
+
+        <h1 hx-get="{% url 'student_details' uuid %}" hx-target=".details">{{ student }}</h1>
+        <div class="details"></div>
+    </div>
+
+    {% endfor %}
+    <script>
+    document.body.addEventListener("unfold",function(evt){
+        console.log(evt.target.parentElement.querySelector(".details").style.maxHeight = "100%")
+    })
+
+</script>
 {% endblock %}
