--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
         {% block sidebar %}
               <a class="{% if request.resolver_match.url_name == "mySubs" %}active{% endif %}" href="{% url 'mySubs' %}">{% trans "My Subs" %}</a>
               <a class="{% if request.resolver_match.url_name == "reportAbsence" %}active{% endif %}" href="{% url 'reportAbsence' %}">{%  trans "Report Absence" %}</a>
+              <a class="{% if request.resolver_match.url_name == "student_manager" %}active{% endif %}" href="{% url 'student_manager' %}">{%  trans "Student Information" %}</a>
             {% if perms.timetable.see_subs %}
                 <a class="{% if request.resolver_match.url_name == "sub" %}active{% endif %}" href="{% url 'sub' %}">{%  trans "Set Substitution" %}</a>
             {% endif %}
