Did some final touches for this "release", added a button to open the details page in a tab, now need to dockerize

--- a/templates/mySubs.html
+++ b/templates/mySubs.html
@@ -18,6 +18,6 @@
                 font-size: xxx-large;
                 text-align: center;
         ">
-            {% trans "No Subs" %}</h1>
+            {% trans "No Scheduled Subs" %}</h1>
     {% endif %}
 {% endblock %}
