--- a/templates/setClasses.html
+++ b/templates/setClasses.html
@@ -14,6 +14,9 @@
             {{ form.teacher }}
             {{ form.student_teaching }}
         </div>
+        <div class="two-fields">
+                    {{ form.description }}
+</div>
         <table>
     <tr>
         <th>08:30</th>
