--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -131,3 +131,14 @@ button[disabled]{
 a:dir(rtl){
     text-align:right ;
 }
+
+textarea{
+    margin-top: 5px;
+    resize: none;
+    font-family: helvetica, arial, sans-serif;
+    font-size: 16px;
+    border: #272727 solid 1px;
+    border-radius: 3px;
+    height: 100px;
+    box-sizing: border-box;
+}
