--- a/templates/student_manager.html
+++ b/templates/student_manager.html
@@ -2,13 +2,13 @@
 {% load i18n %}
 {% load static %}
 {% block static %}
-    <link rel="stylesheet" href="{% static 'student_details.css' %}">
     <link rel="stylesheet" href="{%  static 'student_manager.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 {% endblock %}
+{% block title %}{% trans "Manage Students" %}{% endblock %}
 {% block content %}
-<h1>{% trans "Manage Schedules" %}</h1>
+<h1>{% trans "Manage Students" %}</h1>
     <p id="stats">{% trans "Students With Schedules" %}: <span id="scheduleCount">{{ scheduleCount }}</span>; {% trans "Students Without" %}: <span id="noScheduleCount">{{ studentWithNoSchedule }}</span>; {% trans "Total Students" %}: <span id="totalStudents">{{ scheduleCount|add:studentWithNoSchedule }}</span>.</p>
 
 {# alert box #}
@@ -42,6 +42,7 @@
         <p class="student-name"> {{ student }}</p>
         <div class="button-div">
         <p style="display: inline" hx-get="{% url 'student_details' values.0 %}" hx-target="next .details" id="arrow" ><i class="arrow down"></i></p>
+            <a class="btn btn-secondary" href="{% url "student_details" values.0%}">{% trans "Open Details in new page" %}</a>
     <button  name="{{ values.0 }}" value="True"  hx-post="{% url "send_email" %}" id="{{ values.0 }}" class="btn btn-danger"  >{% trans "Reset Schedule" %}</button>
     </div>
         </div>
