--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -17,6 +17,7 @@
       <h2 id="teacher"></h2>
       <h3 id="room"></h3>
       <h4 id="hour"></h4>
+      <label for="description">{% trans "Description" %}: </label><p style="display: inline" id="description"></p>
 
   </div>
 
