--- a/static/printable_timetable.css
+++ b/static/printable_timetable.css
@@ -1,36 +1,42 @@
+body,html {
+    width: 100%;
+    height: 100%;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
-    body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
+h1,h2,h3,h4 {
+    text-align: center;
+    margin:0;
+}
+h1{
+    font-size: x-large;
+}
 
-    h1,h2,h3,h4 {
-            text-align: center;
-            margin:5px;
-        }
+tr{
+    border: 2px solid black;
+    border-left: 0;
+}
 
-        tr{
-            border: 2px solid black;
-            border-left: 0;
-        }
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th{
+    border-left: 2px solid black;
+    text-align: center;
+}
 
-        table {
-            border-collapse: collapse;
-            margin: 20px auto;
-        }
-        th{
-                        border-left: 2px solid black;
-
-            text-align: center;
-        }
-
-        .hour-row{
-            padding: 2px;
-            background: rgba(218, 165, 32, 0.4);
-        }
-        td{
-            border-left: 2px solid black;
-            padding: 5px;
-            font-size: large;
-        }
+.hour-row{
+    padding: 2px;
+    background: rgba(218, 165, 32, 0.4);
+}
+td{
+    border-left: 2px solid black;
+    padding: 5px;
+    font-size: medium;
+}
+#break{
+    background: lightblue;
+}
