--- a/static/timetable.css
+++ b/static/timetable.css
@@ -157,12 +157,12 @@
 }
 
 .button{
+    margin-top: 5px;
     color: #f3f3f3;
     padding:10px;
     background-color: #1e4a41;
     border: none;
     border-radius: 5px;
-    margin-bottom: 10px;
     transition-duration: 0.5s;
 }
 
@@ -242,3 +242,4 @@
 .hour-row{
     text-align: center;
 }
+
