--- a/templates/publicBase.html
+++ b/templates/publicBase.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://unpkg.com/htmx.org@2.0.1"></script>
     {% load static %}
     {% block static %}{% endblock %}
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
