--- a/templates/teacher_manager.html
+++ b/templates/teacher_manager.html
@@ -2,23 +2,59 @@
 {% load i18n %}
 {% load static %}
 {% block static %}
-    <link rel="stylesheet" href="{%  static 'student_manager.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+.teacher-list{
+    padding:0;
+    margin: 0;
+    list-style: none;
+    display:flex;
+    flex-direction: column;
+}
+.teacher{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    display:flex;
+    font-size: x-large;
+    background-color: rgba(247, 247, 247, 1);
+    border-top: 1px solid lightgray;
+    padding:2px;
+    flex-direction: column;
+}
+.teacher-name{
+    display:inline;
+    margin: 0;
+    padding:5px
+}
 
+
+
+h1:dir(rtl), p:dir(rtl){
+    text-align: right;
+}
+button:dir(rtl),.button-div:dir(rtl){
+    margin-right:auto;
+
+}
+
+button:dir(ltr),.button-div:dir(ltr){
+
+    margin-left:auto;
+}
+    </style>
 {% endblock %}
-{% block title %}{% trans "Manage Teacher" %}{% endblock %}
+{% block title %}{% trans "Manage Teachers" %}{% endblock %}
 {% block content %}
-<h1>{% trans "Manage Teacher" %}</h1>
+<h1>{% trans "Manage Teachers" %}</h1>
 
 
 
-    <div class="student-list">
+    <div class="teacher-list">
 {# show invite all and reset all buttons if user is super user   #}
 
     {% csrf_token %}
 
         {# filter teacher    #}
-      <input onkeyup="filterList()" type="text" id="text-filter" placeholder="{% trans "Search Teacher" %}">
+      <input onkeyup="filterList()" type="text" id="text-filter" placeholder="{% trans "Search Teachers" %}...">
 
     <ul class="teacher-list">
 {% for teacher,form in teachers.items %}
@@ -26,9 +62,8 @@
     <div  class="teacher">
     <div   style="display:flex;flex-direction: row">
         <p class="teacher-name"> {{ teacher }}</p>
-        <form hx-swap="innerHTML" hx-post="{% url "teacher_manager" %}" class="button-div">
-            {{ form }}
-            <input type="submit">
+        <form hx-trigger="change" hx-swap="none" hx-target=".form-fields" hx-post="{% url "teacher_manager" %}" class="button-div">
+            <div class="form-fields">{{ form }}</div>
         </form>
         </div>
         <div class="details"></div>
@@ -43,11 +78,11 @@ function filterList() {
     var input, filter, ul, li, a, i, txtValue;
     input = document.getElementById('text-filter');
     filter = input.value.toUpperCase();
-    ul = document.getElementsByClassName("student-list")[0];
+    ul = document.getElementsByClassName("teacher-list")[0];
     li = ul.getElementsByTagName('li');
 
     for (i = 0; i < li.length; i++) {
-      a = li[i].getElementsByClassName("student")[0];
+      a = li[i].getElementsByClassName("teacher")[0];
       txtValue = a.textContent || a.innerText;
 
       // split filter by spaces, gives ["app", "MN"] in your example
