--- a/templates/teacher_manager.html
+++ b/templates/teacher_manager.html
@@ -31,12 +31,14 @@
 h1:dir(rtl), p:dir(rtl){
     text-align: right;
 }
-button:dir(rtl),.button-div:dir(rtl){
+.button-div:dir(rtl){
+    margin: 5px;
     margin-right:auto;
 
 }
 
-button:dir(ltr),.button-div:dir(ltr){
+.button-div:dir(ltr){
+    margin: 5px;
 
     margin-left:auto;
 }
@@ -60,13 +62,18 @@ button:dir(ltr),.button-div:dir(ltr){
 {% for teacher,form in teachers.items %}
     <li>
     <div  class="teacher">
+
     <div   style="display:flex;flex-direction: row">
+
         <p class="teacher-name"> {{ teacher }}</p>
         <form hx-trigger="change" hx-swap="none" hx-target=".form-fields" hx-post="{% url "teacher_manager" %}" class="button-div">
-            <div class="form-fields">{{ form }}</div>
+            <div class="form-fields">{{ form }}
+</div>
+
         </form>
+                    <button hx-target=".teacher" hx-swap="delete" hx-post="{% url "teacher_manager"%}" name="Delete" value="{{ teacher.uuid }}" class="btn btn-danger">Delete</button>
+
         </div>
-        <div class="details"></div>
     </div>
 </li>
     {% endfor %}
